<?xml version="1.0"?>
<package format="2">
  <name>provider_underwater_com</name>
  <version>0.0.0</version>
  <description>The provider_underwater_com package</description>

  <author>Francis Alonzo</author>
  
  <maintainer email="francisalonzo29@gmail.com">Francis Alonzo</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>log4cxx</build_depend>
  <build_depend>self_test</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sonia_common</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>log4cxx</run_depend>
  <run_depend>self_test</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sonia_common</run_depend>

</package>
