<?xml version="1.0"?>
<package format="2">
  <name>provider_underwater_com</name>
  <version>0.4.0</version>
  <description>The provider_underwater_com package</description>

  <author>Francis Alonzo</author>
  
  <maintainer email="francisalonzo29@gmail.com">Francis Alonzo</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>log4cxx</build_depend>
  <build_depend>self_test</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sonia_common</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>log4cxx</exec_depend>
  <exec_depend>self_test</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sonia_common</exec_depend>

</package>
